# RollCall

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  entry.cxx
src/managers/: app_manager.cxx  app_manager.h  data_manager.cxx  data_manager.h  display_manager.cpp  display_manager.cxx  display_manager.h  gui_manager.cpp  gui_manager.cxx  gui_manager.h
src/models/: student.cxx  student.h  student_list.cxx  student_list.h
src/resources/: gen_rc.py  main.qrc  rename_svg.py
src/resources/components/: ContentMenu.qml  FluentWindow.qml  IconButton.qml  LED.qml  LED2Number.qml  StudentItem.qml
src/resources/views/: AboutPage.qml  MainWindow.qml  PageStack.qml  RandomPage.qml  SettingPage.qml  TitleBar.qml
